	cosminadrianpopescu).

	Fixed search match highlighting of non-ascii characters in right aligned
	file names.

	Fixed capturing output of external applications on Windows when 'shell' is
	"cmd".  Was broken since v0.8 in attempt to make cmd work better with
	Unicode (but its /U flag affects only input and output streams).

	Fixed completion of command-line of this format: `:!~/...`.

0.8.1 to 0.8.1a

	Added c key to menus that inserts parts of menu line into command-line.
	Thanks to filterfalse.

	Added { and } keys to normal and visual modes.  They act similar to ( and
	), but always consider whether entry is a file or directory.  Thanks to
	octos.

	Apply local filter on picking element of `:history filter` menu.

	Added --disable-build-timestamp option to configure script to perform
	reproducible build.  Thanks to Hendrik Jaeger (a.k.a. henk).

	Display more meaningful message on failure to extract option name (unknown
	option: string).

	Handle register specified for gs normal mode command.  Select files listed
	in that register.  Thanks to filterfalse.

	More accurate parsing of bar not surrounded with whitespace.

	Be consistent with regard to when local state is changed and do not reset
	neither local options nor local filter on entering/leaving custom view.
	Thanks to filterfalse.

	Disallow adding duplicated filetype/fileviewer entries (just ignore them
	as they wouldn't be used due to order priority anyway).

	Expand tilde in first argument of :bmark! command.  Thanks to Marcos Cruz.

	Truncate menu titles that don't feet the screen.  Thanks to aleksejrs.

	Fixed redrawing message dialog when 'relativenumber' option is on.  Thanks
	to aleksejrs.

	Fixed resetting statusbar contents on displaying message dialog.

	Fixed parsing background mark after quote (as in `:put " &`).

	Fixed using plugin in neovim, which has broken `system()` and :! commands.
	Thanks to Artur Shaik (a.k.a. artur-shaik).
