@@ -158,6 +158,10 @@
 
 	Fixed completion of command-line of this format: `:!~/...`.
 
+	Fixed epic bug in processing selectors followed by other commands in a
+	mapping.  Command which accepted selector was called after tail of
+	sequence is processed.
+
 0.8.1 to 0.8.1a
 
 	Added c key to menus that inserts parts of menu line into command-line.
